fix spacing on restaurant and nav

--- a/frontend/src/components/restaurant/restaurant.css
+++ b/frontend/src/components/restaurant/restaurant.css
@@ -50,7 +50,7 @@ img {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -58,7 +58,6 @@ img {
     display: flex;
     justify-content: space-around;
     width: 50%;
-    margin-top: 5%;
 }
 
 .restaurant-details p {
@@ -67,7 +66,6 @@ img {
 }
 
 .choices {
-    margin-top: 5%;
     display: flex;
     width: 50%;
     justify-content: space-evenly;
@@ -83,6 +81,7 @@ img {
   width: 15vw;
   border: 1px solid white;
   cursor: pointer;
+  margin-bottom: 5%;
 }
 
 .choices > p:hover {
